# AI_analista

./: .env.example  .gitignore  README.md  pyproject.toml
AI_analistaDados/src/ai/utils/: format_stackoverflow.py  formatar_para_treinamento.py  processar_stackoverflow.py
Extração de dados/extração_de_dados/: chrome.py  extrac_github.py  get_perguntas.py  perguntas.txt  perguntas1.txt  testeLeitura.py
dados_treinamento/exemplos/analise_exploratoria/: carregamento_dados.txt  limpeza_dados.txt
dados_treinamento/exemplos/analise_temporal/: series_temporais.txt
dados_treinamento/exemplos/estatistica/: correlacao.txt  medidas_centralidade.txt  testes_hipotese.txt
dados_treinamento/exemplos/machine_learning/: avaliacao.txt  preprocessamento.txt  treinamento.txt
dados_treinamento/exemplos/stackoverflow/matplotlib plot/: exemplo_0.txt  exemplo_1.txt  exemplo_10.txt  exemplo_11.txt  exemplo_12.txt  exemplo_13.txt  exemplo_2.txt  exemplo_3.txt  exemplo_4.txt  exemplo_5.txt  exemplo_6.txt  exemplo_7.txt  exemplo_8.txt  exemplo_9.txt
dados_treinamento/exemplos/stackoverflow/numpy array/: exemplo_0.txt  exemplo_1.txt  exemplo_10.txt  exemplo_11.txt  exemplo_12.txt  exemplo_13.txt  exemplo_2.txt  exemplo_3.txt  exemplo_4.txt  exemplo_5.txt  exemplo_6.txt  exemplo_7.txt  exemplo_8.txt  exemplo_9.txt
dados_treinamento/exemplos/stackoverflow/pandas tutorial/: exemplo_0.txt  exemplo_1.txt  exemplo_10.txt  exemplo_11.txt  exemplo_12.txt  exemplo_2.txt  exemplo_3.txt  exemplo_4.txt  exemplo_5.txt  exemplo_6.txt  exemplo_7.txt  exemplo_8.txt  exemplo_9.txt
dados_treinamento/exemplos/stackoverflow/python plotting example/: exemplo_0.txt  (+13 more)
dados_treinamento/exemplos/visualizacao/: graficos_basicos.txt  graficos_estatisticos.txt
dados_treinamento/extração_de_dados/: atualiza_BD.py  chrome.py  extrac_Stack.py  extrac_github.py  extrac_notebooks.py  extracaoStackOV.py  wscrap_docs.py
src/ai/: assistente.py  langchain_trainer.py  run_assistente.py
src/ai_analistadados/: EDA.ipynb  run_assistente.py
src/ai_analistadados/eda/: EDA.py  preProcessing.py  reports.py
src/ai_analistadados/models/: assistente.py  fineTuning.py  geraCodigo.ipynb
tests/: test_modelTraining.py  test_preprocess.py  test_searchReferences.py
(+42 files in other folders)
