[tool.poetry]
name = "ai-analistadados"
version = "0.1.0"
description = "Assistente de IA para análise de dados usando LangChain e modelos open source"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
transformers = "^4.36.0"
torch = "^2.2.0"
sentence-transformers = "^2.2.2"
python-dotenv = "^1.0.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.0"
bs4 = "^0.0.2"
selenium = "^4.30.0"
pyautogui = "^0.9.54"
firebase-admin = "^6.7.0"
webdriver-manager = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

